<resources>
    <string name="app_name">DiamondCell</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- String untuk navigation drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_data_master">Pembelian</string>
    <string name="menu_pembelian">Pembelian</string>
    <string name="menu_penjualan">Penjualan</string>
    <string name="menu_transaksi_lain">Transaksi Lain</string>
    <string name="menu_utility">Utility</string>
    <string name="menu_sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
